--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run clean && babel src -d dist --copy-files",
-    "clean": "rimraf dist/*"
+    "clean": "rimraf dist/*",
+    "lint": "eslint './src/**/*.{js,jsx}' --rulesdir .. --ignore-path .gitignore",
+    "lint:fix": "eslint './src/**/*.{js,jsx}' --rulesdir .. --ignore-path .gitignore --fix"
   },
   "repository": {
     "type": "git",
@@ -31,9 +33,16 @@
     "@babel/plugin-transform-flow-strip-types": "^7.4.4",
     "@babel/plugin-transform-for-of": "^7.4.4",
     "@babel/plugin-transform-modules-commonjs": "^7.4.4",
-    "@babel/register": "^7.4.4"
+    "@babel/register": "^7.4.4",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.9.0"
   },
   "dependencies": {
+    "eslint-scope": "^5.0.0",
     "lodash": "^4.17.4",
     "rimraf": "^2.5.4"
   },
