--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run build"
+      "pre-commit": "npm run lint && npm run build"
     }
   },
   "homepage": "https://github.com/MohitVachhani/webexJsonApi#readme"
